<resources>
    <string name="app_name">FencingScroringApp</string>
    <string name="nav_title">Fencing Scroring Plus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_poule">Poule</string>
    <string name="menu_de_10">Direct Elimination 10 Toches</string>
    <string name="menu_de_15">Direct Elimination 15 Touches</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_sanctions">Penalties</string>

    <string name="p_card">P</string>

    <string name="home_second">Home Second</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_donate">Donate</string>
    <string name="accept">Accept</string>
</resources>
